--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         function redirectToMainPage() {
             // Redirect to the main page after the progress bar is complete
-            window.location.href = "final/loading.html"; // Replace with your actual URL
+            window.location.href = "/loading.html"; // Replace with your actual URL
         }
 
         // Start the progress bar animation once the page is loaded
